--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,7 +47,7 @@ repos:
             for DIR in $(printf "%s\n" "${DIRS[@]}" | sort -u)
             do
               cd $(dirname "$FILE")
-              terraform providers lock -platform=windows_amd64 -platform=darwin_amd64 -platform=linux_amd64
+              terraform providers lock -platform=linux_amd64
               cd ..
             done
           '
